# esp32_usb_over_ip

./: CMakeLists.txt  OPTIMIZATION_PLAN.md  OPTIMIZATION_SUMMARY.md  README.md  UAS_PROTOCOL_ASSESSMENT.md  changelog.md  sdkconfig  sdkconfig.defaults
components/board_utils/: CMakeLists.txt  idf_component.yml
components/board_utils/include/: button_manager.h  led_manager.h  pin_define.h  web_page.h  wifi_manager.h
components/board_utils/src/: button_manager.c  led_manager.c  wifi_manager.c
components/usbipdcpp/: CMakeLists.txt
components/usbipdcpp/include/InterfaceHandler/: HidVirtualInterfaceHandler.h  VirtualInterfaceHandler.h
components/usbipdcpp/include/esp32_handler/: ConcurrentTransferTracker.h  Esp32DeviceHandler.h  NetworkPerformanceAdapter.h  UASProtocol.h  ZeroCopyBuffer.h
components/usbipdcpp/include/server/: Server.h  Session.h  protocol.h  type.h
components/usbipdcpp/src/DeviceHandler/: DeviceHandler.cpp  VirtualDeviceHandler.cpp
components/usbipdcpp/src/InterfaceHandler/: HidVirtualInterfaceHandler.cpp  InterfaceHandler.cpp  VirtualInterfaceHandler.cpp
components/usbipdcpp/src/esp32_handler/: ConcurrentTransferTracker.cpp  Esp32DeviceHandler.cpp  Esp32Server.cpp  NetworkPerformanceAdapter.cpp  ZeroCopyBuffer.cpp  tools.cpp
components/usbipdcpp/src/server/: Server.cpp  Session.cpp  device.cpp  protocol.cpp
components/usbipdcpp/usbipdcpp/: CMakeLists.txt
components/usbipdcpp/usbipdcpp/include/: Session.h  protocol.h  type.h  usb_transfer_ptr.h  utils.h
components/usbipdcpp/usbipdcpp/src/: Server.cpp  Session.cpp  protocol.cpp
main/: CMakeLists.txt  main.cpp  usbip_server.h  usbipd_server.cpp  usbipd_server_test.cpp
